php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32730 ext/crack.c fails to compile with cracklib-2.8.3
Submitted: 2005-04-16 21:04 UTC Modified: 2005-04-17 15:27 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: dummy666 at mail dot ru Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.3.11 OS: linux, cracklib-2.8.3
Private report: No CVE-ID: None
 [2005-04-16 21:04 UTC] dummy666 at mail dot ru
Description:
------------
packer.h of cracklib-2.8.3 defines STRINGSIZE inside "#ifdef IN_CRACKLIB" block making this macro invisible for others


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-04-16 21:18 UTC] dummy666 at mail dot ru
--without-crack configure option doesn't work as expected. neither does --with-crack=no
 [2005-04-17 15:27 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC