- Fixed bug #32730 (ext/crack.c fails to compile with cracklib-2.8.3)